--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
     "private": true,
     "type": "module",
     "bin": {
-      "aws-ow-s3-mcp-server": "./build/index.js"
+        "aws-ow-s3-mcp-server": "./build/index.js"
     },
     "files": [
-      "build"
+        "build"
     ],
     "license": "MIT",
     "scripts": {
-      "build": "tsc && shx chmod +x dist/*.js",
-      "prepare": "npm run build",
-      "watch": "tsc --watch",
-      "inspector": "npx @modelcontextprotocol/inspector build/index.js"
+        "build": "tsc && shx chmod +x dist/*.js",
+        "prepare": "npm run build",
+        "watch": "tsc --watch",
+        "inspector": "npx @modelcontextprotocol/inspector build/index.js"
     },
     "dependencies": {
-      "@modelcontextprotocol/sdk": "1.6.1"
+        "@modelcontextprotocol/sdk": "1.6.1"
     },
     "devDependencies": {
-      "@types/node": "^22.13.10",
-      "typescript": "^5.8.2"
+        "@tsconfig/node22": "^22.0.0",
+        "@types/node": "^22.13.10",
+        "typescript": "^5.8.2"
     }
 }
