--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "inspector": "npx @modelcontextprotocol/inspector build/index.js"
     },
     "dependencies": {
-        "@modelcontextprotocol/sdk": "1.6.1"
+        "@aws-sdk/client-s3": "^3.758.0",
+        "@modelcontextprotocol/sdk": "1.7.0"
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
