--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
         "@types/node": "^22.13.10",
+        "shx": "^0.3.4",
         "typescript": "^5.8.2"
     }
 }
